[gd_scene load_steps=18 format=3 uid="uid://lamcax8x6dtt"]

[ext_resource type="Script" uid="uid://j127wrukrjub" path="res://script/Ajustes/Ajustes.gd" id="1_sfv8a"]
[ext_resource type="Texture2D" uid="uid://jg7d4006vfh8" path="res://Fondos/tarjeta_ajustes.png" id="2_02847"]
[ext_resource type="Texture2D" uid="uid://dn6exsqj82wdj" path="res://textures/p-salir.png" id="3_rqv08"]
[ext_resource type="Texture2D" uid="uid://c1q1yiuipu2b2" path="res://textures/p-inicio.png" id="4_75n6u"]
[ext_resource type="Texture2D" uid="uid://c4cf7lpdhply1" path="res://textures/p-continuar.png" id="5_3ckoo"]
[ext_resource type="Theme" uid="uid://bnm47bl77l4si" path="res://Temas/botonesBanners.tres" id="6_woxkn"]
[ext_resource type="Texture2D" uid="uid://beg01q1xg1sm0" path="res://textures/m-cerrar.png" id="7_rl8us"]
[ext_resource type="Theme" uid="uid://dntvqdxo8k3u8" path="res://Temas/ajustes.tres" id="8_8vq27"]
[ext_resource type="FontFile" uid="uid://cstcjqrqa2oe1" path="res://Fonts/DarumadropOne-Regular.ttf" id="9_nxi8b"]
[ext_resource type="Script" uid="uid://c2h8jm01g0or5" path="res://script/Ajustes/grid_container.gd" id="10_7kpvj"]
[ext_resource type="Script" uid="uid://c80d8klh8c1y" path="res://script/Ajustes/slider_br.gd" id="11_vcfbj"]
[ext_resource type="Theme" uid="uid://caol8loxsat7k" path="res://Temas/modoCheck.tres" id="12_1nwcj"]
[ext_resource type="Script" uid="uid://b3dkl1j2hoi4j" path="res://script/Ajustes/check_modo.gd" id="13_7fdjt"]
[ext_resource type="Script" uid="uid://c2ebrv84sb5hu" path="res://script/Ajustes/option_qual.gd" id="14_hyt0i"]
[ext_resource type="Script" uid="uid://u117bkd5minc" path="res://scenes/margin_container_controles.gd" id="15_rm0g4"]
[ext_resource type="Script" uid="uid://t27b3d3leeuj" path="res://script/Ajustes/grid_container_controles.gd" id="16_d03vf"]

[sub_resource type="Theme" id="Theme_4g77v"]
Label/colors/font_color = Color(0.175912, 0.121396, 0.0580004, 1)
Label/font_sizes/font_size = 30
Label/fonts/font = ExtResource("9_nxi8b")

[node name="Popup_Ajustes" type="Popup"]
transparent_bg = true
oversampling_override = 1.0
size = Vector2i(1920, 1080)
visible = true
transparent = true
script = ExtResource("1_sfv8a")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureTarjeta" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 498.0
offset_top = 158.0
offset_right = 2190.0
offset_bottom = 1412.0
scale = Vector2(0.55, 0.6)
texture = ExtResource("2_02847")

[node name="BtnSalir" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1368.0
offset_top = 519.0
offset_right = 1526.0
offset_bottom = 647.0
scale = Vector2(0.9, 0.9)
icon = ExtResource("3_rqv08")
flat = true

[node name="BtnInicio" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1370.0
offset_top = 409.0
offset_right = 1528.0
offset_bottom = 537.0
scale = Vector2(0.9, 0.9)
icon = ExtResource("4_75n6u")
flat = true

[node name="BtnContinuar" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1370.0
offset_top = 299.0
offset_right = 1528.0
offset_bottom = 427.0
scale = Vector2(0.9, 0.9)
icon = ExtResource("5_3ckoo")
flat = true

[node name="BtnCerrar" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1369.0
offset_top = 297.0
offset_right = 1527.0
offset_bottom = 425.0
scale = Vector2(0.9, 0.9)
theme = ExtResource("6_woxkn")
icon = ExtResource("7_rl8us")
flat = true

[node name="MarginContainerAjustes" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_left = 739.0
offset_top = 289.0
offset_right = 1182.0
offset_bottom = 725.0
theme = ExtResource("8_8vq27")

[node name="Ajustes" type="Label" parent="Panel/MarginContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_4g77v")
theme_override_font_sizes/font_size = 40
text = "Ajustes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainerAjustes" type="GridContainer" parent="Panel/MarginContainerAjustes"]
layout_mode = 2
size_flags_vertical = 8
columns = 2
script = ExtResource("10_7kpvj")

[node name="VolumenGeneral" type="Label" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 8
text = "Volumen General   "
vertical_alignment = 1

[node name="SliderVG" type="HSlider" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
mouse_default_cursor_shape = 6
min_value = -30.0
max_value = 0.0

[node name="Musica" type="Label" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 8
text = "Música   "

[node name="SliderM" type="HSlider" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 6
min_value = -30.0
max_value = 0.0

[node name="SFX" type="Label" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 8
text = "Efectos de sonido   "

[node name="SliderSFX" type="HSlider" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 6
min_value = -30.0
max_value = 0.0

[node name="Subtitulos" type="Label" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 8
text = "Subtítulos   "

[node name="OptionSUB" type="OptionButton" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
selected = 2
item_count = 3
popup/item_0/text = "           Español"
popup/item_0/id = 1
popup/item_1/text = "           English"
popup/item_1/id = 2
popup/item_2/text = "      Desactivados      "
popup/item_2/id = 0

[node name="Brillo" type="Label" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 8
text = "Brillo   "

[node name="SliderBR" type="HSlider" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 6
min_value = 0.2
max_value = 1.2
step = 0.1
value = 1.2
script = ExtResource("11_vcfbj")

[node name="Modo" type="Label" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 8
text = "Modo   "

[node name="CheckModo" type="CheckButton" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("12_1nwcj")
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
button_pressed = true
flat = true
script = ExtResource("13_7fdjt")

[node name="Resolucion" type="Label" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 8
text = "Resolución   "

[node name="OptionRES" type="OptionButton" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
selected = 2
item_count = 3
popup/item_0/text = "1152 x 648"
popup/item_0/id = 2
popup/item_1/text = "1600 x 900"
popup/item_1/id = 1
popup/item_2/text = "      1920 x 1080      "
popup/item_2/id = 0

[node name="Calidad" type="Label" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 8
text = "Calidad   "

[node name="OptionQUAL" type="OptionButton" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
selected = 2
item_count = 3
popup/item_0/text = "              Alta"
popup/item_0/id = 2
popup/item_1/text = "            Media             "
popup/item_1/id = 1
popup/item_2/text = "              Baja"
popup/item_2/id = 0
script = ExtResource("14_hyt0i")

[node name="Controles" type="Label" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 8
text = "Controles   "

[node name="BtnControles" type="Button" parent="Panel/MarginContainerAjustes/GridContainerAjustes"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "                 Ver                     "
alignment = 0

[node name="MarginContainerControles" type="MarginContainer" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 789.0
offset_top = 345.0
offset_right = 1076.0
offset_bottom = 645.0
scale = Vector2(1.2, 1.2)
theme = ExtResource("8_8vq27")
script = ExtResource("15_rm0g4")

[node name="ModificaControles" type="Label" parent="Panel/MarginContainerControles"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 27
text = "Controles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainerControles" type="GridContainer" parent="Panel/MarginContainerControles"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("8_8vq27")
columns = 2
script = ExtResource("16_d03vf")

[node name="Saltar" type="Label" parent="Panel/MarginContainerControles/GridContainerControles"]
layout_mode = 2
size_flags_horizontal = 8
text = "Saltar "
vertical_alignment = 1

[node name="BtnSalto" type="Button" parent="Panel/MarginContainerControles/GridContainerControles"]
layout_mode = 2
size_flags_vertical = 4
text = "Barra de espacio"

[node name="Izquierda" type="Label" parent="Panel/MarginContainerControles/GridContainerControles"]
layout_mode = 2
size_flags_horizontal = 8
text = "Izquierda "
vertical_alignment = 1

[node name="BtnIzq" type="Button" parent="Panel/MarginContainerControles/GridContainerControles"]
layout_mode = 2
size_flags_vertical = 4
text = "A"

[node name="Derecha" type="Label" parent="Panel/MarginContainerControles/GridContainerControles"]
layout_mode = 2
size_flags_horizontal = 8
text = "Derecha "
vertical_alignment = 1

[node name="BtnDrch" type="Button" parent="Panel/MarginContainerControles/GridContainerControles"]
layout_mode = 2
size_flags_vertical = 4
text = "D"

[node name="Dash" type="Label" parent="Panel/MarginContainerControles/GridContainerControles"]
layout_mode = 2
size_flags_horizontal = 8
text = "Dash "
vertical_alignment = 1

[node name="BtnDash" type="Button" parent="Panel/MarginContainerControles/GridContainerControles"]
layout_mode = 2
size_flags_vertical = 4
text = "E"

[node name="Correr" type="Label" parent="Panel/MarginContainerControles/GridContainerControles"]
layout_mode = 2
size_flags_horizontal = 8
text = "Correr "
vertical_alignment = 1

[node name="BtnRun" type="Button" parent="Panel/MarginContainerControles/GridContainerControles"]
layout_mode = 2
size_flags_vertical = 4
text = "Shift"

[node name="Reestablecer" type="Button" parent="Panel/MarginContainerControles"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Regresar
"

[connection signal="pressed" from="Panel/BtnCerrar" to="." method="_on_btn_cerrar_pressed"]
[connection signal="value_changed" from="Panel/MarginContainerAjustes/GridContainerAjustes/SliderVG" to="Panel/MarginContainerAjustes/GridContainerAjustes" method="_on_slider_vg_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainerAjustes/GridContainerAjustes/SliderM" to="Panel/MarginContainerAjustes/GridContainerAjustes" method="_on_slider_m_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainerAjustes/GridContainerAjustes/SliderSFX" to="Panel/MarginContainerAjustes/GridContainerAjustes" method="_on_slider_sfx_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainerAjustes/GridContainerAjustes/SliderBR" to="Panel/MarginContainerAjustes/GridContainerAjustes/SliderBR" method="_on_value_changed"]
[connection signal="toggled" from="Panel/MarginContainerAjustes/GridContainerAjustes/CheckModo" to="Panel/MarginContainerAjustes/GridContainerAjustes" method="_on_check_modo_toggled"]
[connection signal="pressed" from="Panel/MarginContainerControles/Reestablecer" to="Panel/MarginContainerControles" method="_on_reestablecer_pressed"]
